first stab at css module requiring

--- a/src/style/Footer.styl
+++ b/src/style/Footer.styl
@@ -1,9 +1,9 @@
 .Footer
-  font-size: 0.75rem
-  display: flex
-  flex-direction: column
-  padding-top: 1rem
-  margin-top: 1rem
+  font-size 0.75rem
+  display flex
+  flex-direction column
+  padding-top 1rem
+  margin-top 1rem
 .Footer-disclaimer
-  font-style: italic
-  margin-bottom: 0.5rem
+  font-style italic
+  margin-bottom 0.5rem
