--- a/src/style/mixins/break.styl
+++ b/src/style/mixins/break.styl
@@ -1,4 +1,4 @@
-@import '../constants/breaks'
+@import "../constants/breaks"
 break($device = "tablet")
   $width = $break-tablet
   if $device == "desktop"
