--- a/src/style/Animate.styl
+++ b/src/style/Animate.styl
@@ -1,21 +1,21 @@
-@import 'constants/animation'
+@import "./constants/animation"
 .Animate--withDelay
-  animation-delay: $animation-delay !important
+  animation-delay $animation-delay !important
 .Animate--slow
-  animation-duration: $animation-duration * 4 !important
+  animation-duration $animation-duration * 4 !important
 @keyframes
   from
-    opacity: 0
-    transform: translateY(2%)
+    opacity 0
+    transform translateY(2%)
   to
-    opacity: 1
-    transform: translateY(0%)
+    opacity 1
+    transform translateY(0%)
 .Animate-fadeBottom
-  animation: fade-bottom $animation-duration 0s backwards
+  animation fade-bottom $animation-duration 0s backwards
 @keyframes
   from
-    opacity: 0
+    opacity 0
   to
-    opacity: 1
+    opacity 1
 .Animate-fadeIn
-  animation: fade-in $animation-duration 0s backwards
+  animation fade-in $animation-duration 0s backwards
