--- a/src/style/Application.styl
+++ b/src/style/Application.styl
@@ -1,20 +1,21 @@
-@import 'constants/colors'
-@import 'constants/typography'
-@import 'utils/normalize'
+@import "./constants/colors"
+@import "./constants/typography"
+@import "./utils/normalize"
+
 html
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+  -webkit-tap-highlight-color rgba(0, 0, 0, 0)
 body
-  color: $color-primary
-  background: $color-white
-  font-size: $font-size
-  font-family: $font-family
-  font-weight: 300
+  color $color-primary
+  background $color-white
+  font-size $font-size
+  font-family $font-family
+  font-weight 300
 html,
 body,
 #root
-  height: 100%
+  height 100%
 a
-  color: $color-secondary
+  color $color-secondary
 h1
-  font-weight: 300
-  text-align: center
+  font-weight 300
+  text-align center
