--- a/src/style/LocaleSwitcher.styl
+++ b/src/style/LocaleSwitcher.styl
@@ -1,13 +1,13 @@
-@import 'constants/colors'
+@import "./constants/colors"
 .LocaleSwitcher-link
-  display: inline-block
-  padding: .25rem 0.5rem
-  margin-left: .5rem
-  color: $color-secondary
-  font-size: .75rem
-  text-decoration: none
-  text-transform: uppercase
-  border-radius: .25rem
+  display inline-block
+  padding .25rem 0.5rem
+  margin-left .5rem
+  color $color-secondary
+  font-size .75rem
+  text-decoration none
+  text-transform uppercase
+  border-radius .25rem
 .LocaleSwitcher-link--active
-  color: $color-white
-  background-color: $color-secondary
+  color $color-white
+  background-color $color-secondary
