--- a/src/style/Page.styl
+++ b/src/style/Page.styl
@@ -1,13 +1,13 @@
-@import 'constants/breaks'
-@import 'mixins/break'
+@import "./constants/breaks"
+@import "./mixins/break"
 .Page
-  display: flex
-  flex-direction: column
-  box-sizing: border-box
-  max-width: $break-desktop
-  min-height: 100%
-  margin: 0 auto
-  padding: 1rem
+  display flex
+  flex-direction column
+  box-sizing border-box
+  max-width $break-desktop
+  min-height 100%
+  margin 0 auto
+  padding 1rem
 .Page-body
-  flex: 1
+  flex 1
   break()
