--- a/src/style/PhotoMeta.styl
+++ b/src/style/PhotoMeta.styl
@@ -1,5 +1,5 @@
 .PhotoMeta
-  display: flex
-  margin-bottom: 1rem
+  display flex
+  margin-bottom 1rem
   > *
-    margin-right: 1rem
+    margin-right 1rem
