--- a/src/style/Thumbnail.styl
+++ b/src/style/Thumbnail.styl
@@ -1,13 +1,13 @@
-@import 'constants/colors'
+@import "./constants/colors"
 .Thumbnail
-  background-color: $color-background
-  box-sizing: border-box
-  min-width: 8rem
-  min-height: 8rem
-  border: 1px solid $color-white
-  background-repeat: no-repeat
-  background-position: center
-  background-size: cover
-  transition: filter .25s
+  background-color $color-background
+  box-sizing border-box
+  min-width 8rem
+  min-height 8rem
+  border 1px solid $color-white
+  background-repeat no-repeat
+  background-position center
+  background-size cover
+  transition filter .25s
   &:hover
-    filter: brightness(75%)
+    filter brightness(75%)
